syntax = "proto3";

option csharp_namespace = "Proto.Command.StatisticsData";


package Proto.Command.StatisticsData;

service StatisticsDataCommandService {
  rpc ChangeProductivity (ChangeProductivityCommand) returns (CommandResponse);
  rpc ChangeTagSelection (ChangeTagSelectionCommand) returns (CommandResponse);
  rpc CreateStatisticsData (CreateStatisticsDataCommand) returns (CommandResponse);
}

message ChangeProductivityCommand {
  string statisticsDataId = 1;
  bool isProductive = 2;
  bool isNeutral = 3;
  bool isUnproductive = 4;
}

message ChangeTagSelectionCommand {
  string statisticsDataId = 1;
  repeated string selectedTagIds = 2;
}

message CreateStatisticsDataCommand {
  string statisticsDataId = 1;
  bool isProductive = 2;
  bool isNeutral = 3;
  bool isUnproductive = 4;
  repeated string tagIds = 5;
  string timeSlotId = 6;
}

message CommandResponse {
  bool success = 1;
}
